Pass the "boothowto" from the bootloader to the kernel. If (an old) bootloader did not pass the flags, check explicitly if we missed RB_USERCONF and invoke userconf_prompt() in MD code, as MI code already missed it. This fixes PR 46466.